# ttyview

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.binaries  LICENSE  README.md  STATUS.md
.github/workflows/: ci.yml  release.yml
client/: README.md  index.js  package.json
crates/ttyview-core/: Cargo.toml
crates/ttyview-core/community-plugins/: demo-transcript-blog-post-draft.jsonl  demo-transcript-feature-experiments.jsonl  demo-transcript-mobile-cc.jsonl  demo-transcript-tmux-web.jsonl  demo-transcript-ttyview-platform.jsonl  demo-transcript.jsonl  registry.json  ttyview-app-name.js  ttyview-cc.js  ttyview-clock.js  ttyview-display-toggles.js  ttyview-image-paste.js  ttyview-live-sync.js  ttyview-logs.js  ttyview-nord.js  ttyview-pane-counter.js  ttyview-pane-picker.js  ttyview-quickkeys.js  ttyview-reload.js  ttyview-session-manager.js  ttyview-solarized-dark.js  ttyview-stt-groq.js  ttyview-stt.js  ttyview-tabs.js  ttyview-terminal-green.js  ttyview-text.js  ttyview-voice-dictation.js
crates/ttyview-core/src/: lib.rs
crates/ttyview-core/src/api/: http.rs  mod.rs  plugins.rs  sessions.rs  state.rs  uploads.rs  ws.rs
crates/ttyview-core/src/cli/: daemon.rs  diff.rs  list.rs  mod.rs  record.rs  replay.rs  snapshot.rs
crates/ttyview-core/src/detectors/: claude.rs  mod.rs  shell.rs
crates/ttyview-core/src/grid/: cell.rs  cursor.rs  line.rs  mod.rs  screen.rs
crates/ttyview-core/src/parser/: mod.rs  vte_handler.rs
crates/ttyview-core/src/source/: mod.rs  multi_session.rs  tmux_control.rs
crates/ttyview-core/src/state/: mod.rs
crates/ttyview-core/ui/: index.html
crates/ttyview-daemon/: Cargo.toml
crates/ttyview-daemon/src/: main.rs
crates/ttyview-sandbox/: Cargo.toml
crates/ttyview-sandbox/src/: main.rs
scripts/: _demo-smoke.mjs  _hub-render-test.mjs  _palette-blue-check.mjs  _picker-meta-screenshot.mjs  _plugins-tab-screenshot.mjs  _tabs-above-input-screenshot.mjs  _tabs-fit-screenshot.mjs  _tabs-groups-screenshot.mjs  _tabs-reorder-check.mjs  _tap-prompt-focus-test.mjs  _voice-dictation-smoke.mjs  deploy-vm.sh  ttyview-diag  ttyview-ui
tests/: README.md
tests/client/: _load-client.ts  background-resume.test.ts  colors.test.ts  fit-resize.test.ts  live-sync.test.ts  package-lock.json  package.json  pane-switch.test.ts  picker-perf.test.ts  plugin-api.test.ts  plugin-install.test.ts  rendering.test.ts  scrollback-append.test.ts  scrollback-prefill.test.ts  semantic-events.test.ts  session-memory.test.ts  settings-search.test.ts  state-sync.test.ts  tab-dots.test.ts  wire-protocol.test.ts
tests/e2e/: _fit-resize-check.mjs  _helpers.ts  _live-sync-check.mjs  _pwa-check-android.mjs  _pwa-check.mjs  _tab-height-check.mjs  _webapk-status.mjs  package-lock.json  package.json  playwright.config.ts  scrolling.spec.ts  send-input.spec.ts
tests/fixtures/: ws-messages.json
