[workspace]
resolver = "3"
members = ["crates/ttyview-core", "crates/ttyview-daemon", "crates/ttyview-sandbox"]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/ttyview/ttyview-daemon"
homepage = "https://github.com/ttyview"
authors = ["Eyal Levin <eyalev@gmail.com>"]
