[package]
name = "ttyview-core"
description = "Core library for ttyview — web terminal viewer for tmux sessions, mobile-first observability for Claude Code and other TUI agents."
readme = "../../README.md"
keywords = ["terminal", "tmux", "tui", "agent", "viewer"]
categories = ["command-line-utilities"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"
