[package]
name = "ttyview-core"
description = "Core library for ttyview — web terminal viewer for tmux sessions. Parses tmux control mode into structured cell grid + cell-diff events."
readme = "../../README.md"
keywords = ["terminal", "tmux", "tui", "agent", "viewer"]
categories = ["command-line-utilities"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
vte = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "process", "sync", "signal", "time", "fs", "net"] }
tokio-util = { version = "0.7", features = ["codec"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
unicode-width = "0.1"
similar = "2"
futures = "0.3"
axum = { version = "0.7", features = ["ws", "multipart"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
dashmap = "6"
rust-embed = { version = "8", features = ["debug-embed"] }
mime_guess = "2"
# Outbound HTTP for the optional remote plugin registry. rustls-tls keeps
# release binaries free of OpenSSL system deps; default features off
# avoids pulling in a second tokio runtime selector.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
# rustls 0.23+ requires an explicit CryptoProvider when more than one
# rustls-using dep is present (axum-server + reqwest both pull it in
# with different default providers, leaving the runtime no way to
# disambiguate). Pinned to ring + installed in `daemon::run_with_options`.
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }

[dev-dependencies]
insta = { version = "1", features = ["json", "yaml"] }
proptest = "1"
tempfile = "3"
