[package]
name = "ttyview-daemon"
description = "Web terminal viewer daemon — attaches to tmux, exposes a structured cell-grid over HTTP/WS for the ttyview-client browser app. Mobile-first observability for Claude Code and other TUI agents."
readme = "../../README.md"
keywords = ["terminal", "tmux", "tui", "agent", "viewer"]
categories = ["command-line-utilities"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "ttyview"
path = "src/main.rs"

[dependencies]
ttyview-core = { path = "../ttyview-core", version = "0.1.0" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
