[package]
name = "ttyview-sandbox"
description = "Per-visitor sandbox broker: spawns a fresh tmux + ttyview-daemon per session, reverse-proxies HTTP + WebSocket by session id, garbage-collects idle sessions."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "ttyview-sandbox"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "signal", "sync", "time", "net", "io-util"] }
axum = { version = "0.7", features = ["ws"] }
http-body-util = "0.1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip", "stream"] }
